@@ -1,4 +1,4 @@
-# TODO: formant_app - VTL not updated when clicking spectrum only spetrogram; think about how best to normalize amDep; reportTime - show %done, max 2 time levels (eg days + h, remove min & s); check main in all plots - should be like analyze & spectrogram ('' if audio$filename_base = 'sound'); NB: turn off debug mode in pitch_app & formant_app before submitting to CRAN!
+# TODO: think about how best to normalize amDep; check main in all plots - should be like analyze & spectrogram ('' if audio$filename_base = 'sound'); NB: turn off debug mode in pitch_app & formant_app before submitting to CRAN!
 
 # TODO maybe: shiftPitch (phase vocoder and/or psola); compareSounds - input folder creates a distance matrix based on features and/or melSpec; add mel/bark to spectrogram(yScale); inverse distance weighting interpolation instead of interpolMatrix; sharpness in getLoudness(see Fastl p. 242); Viterbi algorithm for pathfinding; check loudness estimation (try to find standard values to compare); adaptive priors for pitch tracking - use first pass to update the prior per sound, then redo pathfinding; pitch tracker based on coincidence of subharmonics of strong spectral peaks (see Fastl & Zwicker p. 124), maybe also refine cepstrum to look for freq windows with a strong cepstral peak, like opera singing over the orchestra; morph multiple sounds not just 2; maybe vectorize lipRad/noseRad; some smart rbind_fill in all ...Folder functions() in case of missing columns; soundgen- use psola when synthesizing 1 gc at a time; soundgen - pitch2 for dual source (desynchronized vocal folds); AM aspiration noise (not really needed, except maybe for glottis > 0); morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
 
